--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "typescript": "^5.0.0",
     "vite": "^4.3.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@tensorflow-models/toxicity": "^1.2.2",
+    "@tensorflow/tfjs": "^4.6.0"
+  }
 }
